[gd_scene load_steps=2 format=3 uid="uid://c80lgts35xsrt"]

[ext_resource type="Script" path="res://scanner/scanner_ui.gd" id="1_1pr4t"]

[node name="ScannerUI" type="Control"]
custom_minimum_size = Vector2(1920, 1080)
layout_mode = 3
anchors_preset = 0
offset_right = 1920.0
offset_bottom = 1080.0
script = ExtResource("1_1pr4t")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScanSomethingLabel" type="Label" parent="Panel"]
visible = false
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -70.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 200
text = "Scan something"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="NameLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.432
offset_bottom = 0.0639954
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = -40
theme_override_font_sizes/font_size = 154
text = "Aginavesh Aginaveshson"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="AddressLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.439
anchor_right = 1.0
anchor_bottom = 0.994
offset_top = -0.120026
offset_bottom = -0.52002
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = -30
theme_override_font_sizes/font_size = 136
text = "99 Honeysuckle Esplanade
Port Roythopardu NSW 1930"
horizontal_alignment = 1
autowrap_mode = 2
